# server

./: BUILD.bazel  WORKSPACE.bazel  main.cc
Database/: Database.txt  Person.cpp  Person.h  database.cpp  database.h
database/: BUILD.bazel  Database.db  Database.txt  database.cpp  database.h  settings.h
json/: BUILD.bazel
message_handler/: BUILD.bazel  MessageHandler.cpp  MessageHandler.h
person/: BUILD.bazel  person.cpp  person.h
sqlite3/: BUILD.bazel
