cc_library(
    name = "json_cpp",
    hdrs = [
        "json/json-forwards.h",
        "json/json.h",
    ],
    srcs = [
        "json/jsoncpp.cpp",
    ],
    includes = [
        "json/json-forwards.h",
        "json/json.h",
    ],
)

cc_binary(
name = "test",
srcs = ["main.cc"],
deps = ["@boost//:asio",
":json_cpp"],
)
