cc_library(
    name = "message_handler_cpp",    
    hdrs = [
        "MessageHandler.h",
    ],
    srcs = [
        "MessageHandler.cpp",
    ],
    deps = [
        "//database:database_cpp",
        "//json:json_cpp",
        "//person:person_cpp",
        "//sqlite3:sqlite3_cpp"
    ],
    visibility = ["//visibility:public"],
)